# tictactoe-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: asgi.py  settings.py  urls.py  wsgi.py
game/: models.py  serializers.py  services.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_game_previous_player_alter_game_board.py  0003_rename_previous_player_game_player.py
game/tests/: test_models.py  test_services.py  test_views.py
