[tool.poetry]
name = "tictactoe-api"
version = "0.1.0"
description = "REST API for a game of tic-tac-toe"
authors = ["Adrian Kalinin <adriankalinin@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tictactoe_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
